--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -6,6 +6,8 @@ set(f9omstw_src
  OmsRxItem.cpp
  OmsBackend.cpp
  OmsBackendRecorder.cpp
+ OmsOrdTeam.cpp
+ OmsOrdNoMap.cpp
 
  OmsTree.cpp
  OmsIvBase.cpp
@@ -26,6 +28,7 @@ set(f9omstw_src
  OmsRequestPolicy.cpp
  OmsPoIvList.cpp
  OmsPoIvListAgent.cpp
+ OmsPoUserRights.cpp
 
  OmsRequestTws.cpp
  OmsOrderTws.cpp
@@ -33,17 +36,21 @@ set(f9omstw_src
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
 
-set (OmsRequestPolicy_UT_src
- OmsRequestPolicy_UT
+set (Utws_src
  ../apps/f9omstw/utws/UtwsBrk.cpp
  ../apps/f9omstw/utws/UtwsIvac.cpp
  ../apps/f9omstw/utws/UtwsSubac.cpp
  ../apps/f9omstw/utws/UtwsIvSc.cpp
  ../apps/f9omstw/utws/UtwsIvSymb.cpp
 )
-add_executable(OmsRequestPolicy_UT ${OmsRequestPolicy_UT_src})
+
+add_executable(OmsRequestPolicy_UT OmsRequestPolicy_UT.cpp ${Utws_src})
 target_link_libraries(OmsRequestPolicy_UT f9omstw_s)
 target_include_directories(OmsRequestPolicy_UT PUBLIC ../apps/f9omstw)
 
-add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp)
+add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp ${Utws_src})
 target_link_libraries(OmsReqOrd_UT f9omstw_s)
+target_include_directories(OmsReqOrd_UT PUBLIC ../apps/f9omstw)
+
+add_executable(OmsOrdNoMap_UT OmsOrdNoMap_UT.cpp)
+target_link_libraries(OmsOrdNoMap_UT f9omstw_s)
