BrkId, OrdNo 放在 OmsRequestBase 提供市場唯一Key. OmsRequestNew 改成 OmsRequestIni; 提供新單或遺失補單操作.

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -19,8 +19,10 @@ set(f9omstw_src
  OmsIvSymb.cpp
  OmsSymbTree.cpp
 
- OmsRequest.cpp
  OmsRequestId.cpp
+ OmsRequestBase.cpp
+ OmsRequestTrade.cpp
+ OmsRequestMatch.cpp
  OmsRequestFactory.cpp
  OmsRequestRunner.cpp
  OmsOrder.cpp
