Add OmsReqyestTrade_UT: Test: OmsRequestIni.PreCheck_OrdKey(); OmsRequestIni.PreCheck_IvRight(); OmsRequestUpd.PreCheck_GetRequestInitiator();

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -43,15 +43,20 @@ set (Utws_src
  ../apps/f9omstw/utws/UtwsSubac.cpp
  ../apps/f9omstw/utws/UtwsIvSc.cpp
  ../apps/f9omstw/utws/UtwsIvSymb.cpp
+ ../apps/f9omstw/utws/UtwsSymb.cpp
 )
 
 add_executable(OmsRequestPolicy_UT OmsRequestPolicy_UT.cpp ${Utws_src})
 target_link_libraries(OmsRequestPolicy_UT f9omstw_s)
 target_include_directories(OmsRequestPolicy_UT PUBLIC ../apps/f9omstw)
 
+add_executable(OmsOrdNoMap_UT OmsOrdNoMap_UT.cpp)
+target_link_libraries(OmsOrdNoMap_UT f9omstw_s)
+
+add_executable(OmsRequestTrade_UT OmsRequestTrade_UT.cpp ${Utws_src})
+target_link_libraries(OmsRequestTrade_UT f9omstw_s)
+target_include_directories(OmsRequestTrade_UT PUBLIC ../apps/f9omstw)
+
 add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp ${Utws_src})
 target_link_libraries(OmsReqOrd_UT f9omstw_s)
 target_include_directories(OmsReqOrd_UT PUBLIC ../apps/f9omstw)
-
-add_executable(OmsOrdNoMap_UT OmsOrdNoMap_UT.cpp)
-target_link_libraries(OmsOrdNoMap_UT f9omstw_s)
