Add OmsCoreMgr; OmsPoUserRightsAgent; 準備 API(使用 fon9::rc 協定).

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -22,7 +22,7 @@ set(f9omstw_src
  OmsRequestId.cpp
  OmsRequestBase.cpp
  OmsRequestTrade.cpp
- OmsRequestMatch.cpp
+ OmsRequestFilled.cpp
  OmsRequestFactory.cpp
  OmsRequestRunner.cpp
  OmsOrder.cpp
@@ -32,9 +32,13 @@ set(f9omstw_src
  OmsPoIvList.cpp
  OmsPoIvListAgent.cpp
  OmsPoUserRights.cpp
+ OmsPoUserRightsAgent.cpp
 
  OmsRequestTws.cpp
  OmsOrderTws.cpp
+ 
+ OmsRcServer.cpp
+ OmsRcServerFunc.cpp
 )
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
@@ -47,18 +51,25 @@ set (Utws_src
  ../apps/f9omstw/utws/UtwsIvSymb.cpp
  ../apps/f9omstw/utws/UtwsSymb.cpp
 )
+add_library(f9omsUtws_s STATIC ${Utws_src})
+target_link_libraries(f9omsUtws_s f9omstw_s fon9_s pthread dl)
+target_include_directories(f9omsUtws_s PUBLIC ../apps/f9omstw)
 
-add_executable(OmsRequestPolicy_UT OmsRequestPolicy_UT.cpp ${Utws_src})
-target_link_libraries(OmsRequestPolicy_UT f9omstw_s)
+add_executable(OmsRequestPolicy_UT OmsRequestPolicy_UT.cpp)
+target_link_libraries(OmsRequestPolicy_UT f9omstw_s f9omsUtws_s)
 target_include_directories(OmsRequestPolicy_UT PUBLIC ../apps/f9omstw)
 
 add_executable(OmsOrdNoMap_UT OmsOrdNoMap_UT.cpp)
 target_link_libraries(OmsOrdNoMap_UT f9omstw_s)
 
-add_executable(OmsRequestTrade_UT OmsRequestTrade_UT.cpp ${Utws_src})
-target_link_libraries(OmsRequestTrade_UT f9omstw_s)
+add_executable(OmsRequestTrade_UT OmsRequestTrade_UT.cpp)
+target_link_libraries(OmsRequestTrade_UT f9omstw_s f9omsUtws_s)
 target_include_directories(OmsRequestTrade_UT PUBLIC ../apps/f9omstw)
 
-add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp ${Utws_src})
-target_link_libraries(OmsReqOrd_UT f9omstw_s)
+add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp)
+target_link_libraries(OmsReqOrd_UT f9omstw_s f9omsUtws_s)
 target_include_directories(OmsReqOrd_UT PUBLIC ../apps/f9omstw)
+
+add_executable(OmsRcServer_UT OmsRcServer_UT.cpp)
+target_link_libraries(OmsRcServer_UT f9omstw_s f9omsUtws_s)
+target_include_directories(OmsRcServer_UT PUBLIC ../apps/f9omstw)
