Add OmsCore::ReportSubject(), ReportRecover(); LogAppend();

--- a/forms/ApiTws.cfg
+++ b/forms/ApiTws.cfg
@@ -40,7 +40,7 @@ REQ.TwsNew, $Tx_TwsNew {
 }
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
-# - TargetIniSNO
+# - IniSNO
 #   - 此時若有提供 Market + SessionId + BrkId + OrdNo, 則必須正確!
 # - Market + SessionId + BrkId + OrdNo
 $ApiReqTwsDcq = {
@@ -48,7 +48,7 @@ $ApiReqTwsDcq = {
   BrkId,   $Tx_BrkId
   OrdNo,   $Tx_OrdNo
   
-  TargetIniSNO/IniSNO, $Tx_TargetIniSNO
+  IniSNO,  $Tx_IniSNO
 }
 # 台灣證券 [刪改查] 要求.
 REQ.TwsChgQty/TwsChg, $Tx_TwsChgQty {
