--- a/forms/Api_zh.cfg
+++ b/forms/Api_zh.cfg
@@ -30,4 +30,4 @@ $Tx_Pri           = 價格
 $Tx_QtyTws        = 數量,           股數
 $Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減股數,>0:改後股數'
 $Tx_OrdNo         = 委託書號
-$Tx_TargetIniSNO  = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
+$Tx_IniSNO        = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
