--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -39,6 +39,7 @@ set(f9omstw_src
  
  OmsRcServer.cpp
  OmsRcServerFunc.cpp
+ OmsRcClient.cpp
 )
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
