增加回報通知功能

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -27,6 +27,7 @@ set(f9omstw_src
  OmsRequestRunner.cpp
  OmsOrder.cpp
  OmsOrderFactory.cpp
+ OmsEventFactory.cpp
 
  OmsRequestPolicy.cpp
  OmsPoIvList.cpp
