--- a/forms/ApiAll.cfg
+++ b/forms/ApiAll.cfg
@@ -7,4 +7,5 @@
 $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白」: 則使用正體中文(zh).
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
-$include: ApiTws.cfg
+$include: ApiTwsReq.cfg
+$include: ApiTwsRpt.cfg
