--- a/forms/ApiBase.cfg
+++ b/forms/ApiBase.cfg
@@ -5,7 +5,7 @@
 #
 ###########################################################
 # API表單設定
-# - 格式:
+# - 下單格式:
 #   REQ.[ApiReqName/]SysReqName [,Title[,Description]] {
 #     API欄位設定,每行一個欄位.
 #   }
@@ -46,3 +46,102 @@ $ApiReqBase = {
   Market,    $Tx_Market
   SessionId, $Tx_SessionId
 }
+
+###########################################################
+# 回報格式:
+# - RPT.[ApiName/]SysName [:GR] [,Title[,Description]] {
+#     API欄位設定,每行一個欄位.
+#   }
+# - 若有多台 OMS, 每台的 ReportSNO 各自編號,
+#   不同主機的 ReportSNO, **不是** 同一筆回報.
+# ---------------------------------------------------------
+# 事件回報:
+# * RPT.MktSes {\n 需要回報的欄位\n }\n
+# * RPT.LineSt {\n 需要回報的欄位\n }\n
+# ---------------------------------------------------------
+# 「下單要求」失敗, 未進入流程, 沒有對應的 order, 回報設定:
+# GR 為 `abandon`
+# 設定範例:
+# RPT.TwsNew : abandon {
+#   ErrCode = %AbandonErrCode
+#   Message = %AbandonReason
+#   其他欄位(例如: Market,SessionId,BrkId,IvacNo,Symbol,Side...)
+# }
+# ---------------------------------------------------------
+# 「下單要求」回報
+# 「下單要求」一律逐筆回報.
+# 設定範例:
+# RPT.TwsNew {
+#   例如:ReqUID,Market,SessionId,BrkId,IvacNo,Symbol,Side...
+# }
+$RptOrdKey = {
+  Market
+  SessionId
+  BrkId
+  OrdNo
+}
+$RptReqBase = {
+  Kind
+  ReqUID
+  CrTime
+}
+$RptReqFrom = {
+# SesName
+# Src
+  UserId
+  FromIp
+  UsrDef
+  ClOrdId
+}
+# ---------------------------------------------------------
+# 「委託異動」回報, GR 為 RequestSysName(例如: TwsNew, TwsChg, TwsFilled...)
+# 設定範例:
+# RPT.TwsOrd : TwsNew {
+#   提供 TwsNew 會變動的欄位.
+#   TwsNew 不會改變 CumQty... 所以不用回報.
+#   例如:OrdSt,ReqSt,ErrCode,OrdNo,
+#        BeforQty,AfterQty,LeavesQty,UpdateTime,Message,
+#        LastExgTime,OType
+# }
+# RPT.TwsOrd : TwsChg {
+#   TwsChg 不會改變 OType, CumQty... 所以不用回報.
+#   TwsChg 雖然不會改變 OrdNo, 但 OrdNo 是除了 SNO 之外重要的 key, 所以要回報.
+#   例如:OrdSt,ReqSt,ErrCode,OrdNo,
+#        BeforQty,AfterQty,LeavesQty,UpdateTime,Message,
+#        LastExgTime
+# }
+# RPT.TwsOrd : TwsFilled {
+#   TwsFilled 不會改變 OType, LastExgTime... 所以不用回報.
+#   TwsFilled 會清除 ErrCode, Message... 所以需要回報.
+#   例如:OrdSt,ReqSt,ErrCode,OrdNo,
+#        BeforQty,AfterQty,LeavesQty,UpdateTime,Message,
+#        CumQty,CumAmt,LastFilledTime
+# }
+$RptOrdSt = {
+  OrdSt
+  ReqSt
+  ErrCode
+  OrdNo
+}
+$RptOrdMsg = {
+  UpdateTime
+  Message
+}
+
+# 一般單腳委託的回報, 若是雙腳(或多腳)單, 則需另外設定.
+$RptOrdQty = {
+  BeforeQty
+  AfterQty
+  LeavesQty
+}
+$RptOrdBase = {
+  $RptOrdSt
+  $RptOrdQty
+  $RptOrdMsg
+}
+$RptOrdCum = {
+  LastFilledTime
+  CumQty
+  CumAmt
+}
+###########################################################
