--- a/forms/ApiTwsReq.cfg
+++ b/forms/ApiTwsReq.cfg
@@ -1,7 +1,7 @@
 ﻿#
-# ApiTws.cfg
+# ApiTwsReq.cfg
 #
-# API交易表單設定: 台灣證券
+# API下單表單設定: 台灣證券
 #
 ###########################################################
 $include: ApiBase.cfg
