--- a/forms/Api_zh.cfg
+++ b/forms/Api_zh.cfg
@@ -6,7 +6,7 @@
 
 # 提供欄位的 Title, Description
 $Tx_TwsNew        = 台股新單
-$Tx_TwsAFD        = 台股刪單, 提供的欄位必須與原始新單要求相同
+$Tx_TwsAFD        = 台股刪單, 提供的欄位必須與初始要求相同
 $Tx_TwsDelete     = 台股刪單
 $Tx_TwsChgQty     = 台股改量
 $Tx_TwsQuery      = 台股查詢
