Add C API: 使用 fon9::rc protocol. 使用 OmsRcFramework_UT 驗證測試.

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -41,11 +41,14 @@ set(f9omstw_src
  OmsRcServer.cpp
  OmsRcServerFunc.cpp
  OmsRcClient.cpp
+ OmsRcClientApi.cpp
+ OmsGvTable.cpp
 )
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
 
 set (Utws_src
+ ../apps/f9omstw/utws/UtwsOmsCore.cpp
  ../apps/f9omstw/utws/UtwsBrk.cpp
  ../apps/f9omstw/utws/UtwsIvac.cpp
  ../apps/f9omstw/utws/UtwsSubac.cpp
@@ -72,6 +75,10 @@ add_executable(OmsReqOrd_UT OmsReqOrd_UT.cpp)
 target_link_libraries(OmsReqOrd_UT f9omstw_s f9omsUtws_s)
 target_include_directories(OmsReqOrd_UT PUBLIC ../apps/f9omstw)
 
-add_executable(OmsRcServer_UT OmsRcServer_UT.cpp)
-target_link_libraries(OmsRcServer_UT f9omstw_s f9omsUtws_s)
-target_include_directories(OmsRcServer_UT PUBLIC ../apps/f9omstw)
+add_executable(OmsRcAgents_UT OmsRcAgents_UT.cpp)
+target_link_libraries(OmsRcAgents_UT f9omstw_s f9omsUtws_s)
+target_include_directories(OmsRcAgents_UT PUBLIC ../apps/f9omstw)
+
+add_executable(OmsRcFramework_UT OmsRcFramework_UT.cpp OmsRcFramework_UT_C.c)
+target_link_libraries(OmsRcFramework_UT f9omstw_s f9omsUtws_s)
+target_include_directories(OmsRcFramework_UT PUBLIC ../apps/f9omstw)
