Add: TSEC(& OTC) FIX 下單(尚未處理回報); 及 OmsRcClient_UT.c 使用 f9OmsRc protocol 下單 API 的 C 範例程式.

--- a/f9omsrc/CMakeLists.txt
+++ b/f9omsrc/CMakeLists.txt
@@ -13,3 +13,7 @@ target_link_libraries(OmsRcAgents_UT f9omstw_s f9utws_s f9omsrc_s)
 
 add_executable(OmsRcFramework_UT OmsRcFramework_UT.cpp OmsRcFramework_UT_C.c)
 target_link_libraries(OmsRcFramework_UT f9omstw_s f9utws_s f9omsrc_s)
+
+# ---
+add_executable(OmsRcClient_UT OmsRcClient_UT.c)
+target_link_libraries(OmsRcClient_UT f9omsrc_s)
