--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -44,6 +44,7 @@ set (f9utws_src
  ../f9omstws/OmsTwsRequest.cpp
  ../f9omstws/OmsTwsOrder.cpp
  ../f9utws/UtwsOmsCore.cpp
+ ../f9utws/UtwsExgSenderStep.cpp
  ../f9utws/UtwsBrk.cpp
  ../f9utws/UtwsIvac.cpp
  ../f9utws/UtwsSubac.cpp
