調整「補單」操作: 應先使用 Rpt(RxKind=新單) 補單, 後續就可使用「刪改查」要求.

--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -51,8 +51,10 @@ $ApiReqTwsDcq = {
   IniSNO,  $Tx_IniSNO
 }
 # 台灣證券 [刪改查] 要求.
-REQ.TwsChgQty/TwsChg, $Tx_TwsChgQty {
-  # /Kind = $RxKind_RequestChgQty 系統根據 Qty 自動判斷.
-  Qty, $Tx_QtyChg
+REQ.TwsChg, $Tx_TwsChg {
+  Kind      # 如果 Client 沒填, 則系統根據 Qty、Pri、PriType 自動判斷.
+  Qty,      $Tx_QtyChg
+  PriType
+  Pri
   $ApiReqTwsDcq
 }
