--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -36,10 +36,11 @@ $RptTwsNewFields = {
   SalesNo
   Side
   Symbol
+  IniOType/OType
   IniQty/Qty
   Pri
   PriType
-  IniOType/OType
+  TimeInForce
 }
 RPT.TwsNew : abandon {
   $RptTwsNewFields
@@ -51,7 +52,9 @@ $RptTwsChgFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  ChgQty/Qty
+  ChgQty    /Qty
+  ChgPri    /Pri
+  ChgPriType/PriType
 }
 RPT.TwsChg : abandon {
   $RptTwsChgFields
@@ -68,18 +71,24 @@ RPT.TwsChg {
 RPT.TwsFilled {
   MatchKey
   MatchTime/Time
-  MatchPri/Pri
-  MatchQty/Qty
+  MatchPri /Pri
+  MatchQty /Qty
 }
 ###########################################################
 RPT.TwsOrd : TwsNew {
   $RptOrdBase
-  LastExgTime
   OType
+  LastExgTime
+  LastPri
+  LastPriType
+  LastPriTime
 }
 RPT.TwsOrd : TwsChg {
   $RptOrdBase
   LastExgTime
+  LastPri
+  LastPriType
+  LastPriTime
 }
 RPT.TwsOrd : TwsFilled {
   $RptOrdBase
