提供簡單的 TwsRpt 新單回報(補單), 透過 OmsRequestTrade_UT 測試.

--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -29,14 +29,13 @@ $ApiReqTwsNew = {
   Qty,     $Tx_QtyTws
 }
 # 台灣證券新單要求.
-# 或提供全部欄位的刪查:
+# 或提供全部欄位的刪改查:
 # - 若委託已存在則相關欄位(IvacNo、SubacNo、Symb、Side...)必須正確.
-# - 若委託不存在(補單操作), 則必須有 OmsIvRight::AllowRequestIni 權限.
 REQ.TwsNew, $Tx_TwsNew {
   Kind = $RxKind_RequestNew
   $ApiReqTwsNew
   OrdNo, $Tx_OrdNo   # 新單:客戶必須有自填委託書號(or櫃號)的權限.
-                     # 刪查、補單:必須提供要刪查的委託書號.
+                     # 刪改查:必須提供要刪改查的委託書號.
 }
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
