支援本機送單後的回報, 透過 OmsReport_UT 驗證.

--- a/f9omsrc/forms/ApiBase.cfg
+++ b/f9omsrc/forms/ApiBase.cfg
@@ -94,7 +94,7 @@ $RptReqFrom = {
   ClOrdId
 }
 # ---------------------------------------------------------
-# 「委託異動」回報, GR 為 RequestSysName(例如: TwsNew, TwsChg, TwsFilled...)
+# 「委託異動」回報, GR 為 RequestSysName(例如: TwsNew, TwsChg, TwsFil...)
 # 設定範例:
 # RPT.TwsOrd : TwsNew {
 #   提供 TwsNew 會變動的欄位.
@@ -110,9 +110,9 @@ $RptReqFrom = {
 #        BeforQty,AfterQty,LeavesQty,UpdateTime,Message,
 #        LastExgTime
 # }
-# RPT.TwsOrd : TwsFilled {
-#   TwsFilled 不會改變 OType, LastExgTime... 所以不用回報.
-#   TwsFilled 會清除 ErrCode, Message... 所以需要回報.
+# RPT.TwsOrd : TwsFil {
+#   TwsFil 不會改變 OType, LastExgTime... 所以不用回報.
+#   TwsFil 會清除 ErrCode, Message... 所以需要回報.
 #   例如:OrdSt,ReqSt,ErrCode,OrdNo,
 #        BeforQty,AfterQty,LeavesQty,UpdateTime,Message,
 #        CumQty,CumAmt,LastFilledTime
