--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -68,7 +68,7 @@ RPT.TwsNew {
 RPT.TwsChg {
   $RptTwsChgFields
 }
-RPT.TwsFilled {
+RPT.TwsFil {
   MatchKey
   MatchTime/Time
   MatchPri /Pri
@@ -90,7 +90,7 @@ RPT.TwsOrd : TwsChg {
   LastPriType
   LastPriTime
 }
-RPT.TwsOrd : TwsFilled {
+RPT.TwsOrd : TwsFil {
   $RptOrdBase
   $RptOrdCum
 }
