處理交易所回報.

--- a/f9omstws/CMakeLists.txt
+++ b/f9omstws/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(f9omstws_src
  OmsTwsRequest.cpp
- OmsTwsReport.cpp
  OmsTwsFilled.cpp
+ OmsTwsReport.cpp
+ OmsTwsReportTools.cpp
  OmsTwsOrder.cpp
  OmsTwsTradingLineMgr.cpp
  OmsTwsTradingLineFix.cpp
