OmsRcClient_UT 支援回報補單.

--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -27,6 +27,7 @@ $ApiReqTwsNew = {
   PriType, $Tx_PriTypeTws
   Pri,     $Tx_Pri
   Qty,     $Tx_QtyTws
+  TimeInForce, $Tx_TimeInForce
 }
 # 台灣證券新單要求.
 # 或提供全部欄位的刪改查:
@@ -36,6 +37,18 @@ REQ.TwsNew, $Tx_TwsNew {
   $ApiReqTwsNew
   OrdNo, $Tx_OrdNo   # 新單:客戶必須有自填委託書號(or櫃號)的權限.
                      # 刪改查:必須提供要刪改查的委託書號.
+}
+
+# 台灣證券回報補單要求.
+# 若輸入的補單回報有誤, 會透過 RPT.TwsRpt : abandon 回覆(SNO=0), 且無法回補.
+REQ.TwsRpt, $Tx_TwsRpt {
+  Kind
+  $ApiReqTwsNew
+  OrdNo, $Tx_OrdNo
+  BeforeQty
+  ReportSt = f2   # ExchangeAccepted = 0xf2
+  ErrCode
+  ExgTime
 }
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
