--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -47,6 +47,11 @@ RPT.TwsNew : abandon {
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
 }
+RPT.TwsRpt : abandon {
+  $RptTwsNewFields
+  ErrCode/ = %AbandonErrCode
+  Message/ = %AbandonReason
+}
 
 $RptTwsChgFields = {
   $RptOrdKey
@@ -65,6 +70,9 @@ RPT.TwsChg : abandon {
 RPT.TwsNew {
   $RptTwsNewFields
 }
+RPT.TwsRpt {
+  $RptTwsNewFields
+}
 RPT.TwsChg {
   $RptTwsChgFields
 }
@@ -76,6 +84,14 @@ RPT.TwsFil {
 }
 ###########################################################
 RPT.TwsOrd : TwsNew {
+  $RptOrdBase
+  OType
+  LastExgTime
+  LastPri
+  LastPriType
+  LastPriTime
+}
+RPT.TwsOrd : TwsRpt {
   $RptOrdBase
   OType
   LastExgTime
