--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -10,6 +10,7 @@ $Tx_TwsAFD        = 台股刪單, 提供的欄位必須與初始要求相同
 $Tx_TwsChg        = 台股刪改查
 $Tx_TwsDelete     = 台股刪單
 $Tx_TwsQuery      = 台股查詢
+$Tx_TwsRpt        = 台股回報
 
 $Tx_Market        = 市場別
 $Tx_MarketTws     = $Tx_Market,     {T=台灣上市,O=台灣上櫃,E=台灣興櫃}
@@ -31,3 +32,5 @@ $Tx_QtyTws        = 數量,           股數
 $Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減股數,>0:改後股數'
 $Tx_OrdNo         = 委託書號
 $Tx_IniSNO        = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
+
+$Tx_TimeInForce   = 時間條件,       {=當日有效,I=IOC,F=FOK}
