--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -74,3 +74,6 @@ target_link_libraries(OmsReqOrd_UT f9omstw_s f9utws_s)
 
 add_executable(OmsReport_UT ../f9omstw/OmsReport_UT.cpp)
 target_link_libraries(OmsReport_UT f9omstw_s f9utws_s)
+
+add_executable(OmsLogAnalyser ../f9omstw/OmsLogAnalyser.cpp)
+target_link_libraries(OmsLogAnalyser f9omstw_s f9utws_s)
