--- a/f9omstws/CMakeLists.txt
+++ b/f9omstws/CMakeLists.txt
@@ -8,6 +8,7 @@ set(f9omstws_src
  OmsTwsTradingLineMgrCfg.cpp
  OmsTwsTradingLineFix.cpp
  OmsTwsTradingLineFixSend.cpp
+ OmsTwsSenderStepG1.cpp
 )
 add_library(f9omstws_s STATIC ${f9omstws_src})
 target_link_libraries(f9omstws_s f9omstw_s f9tws_s fon9_s pthread dl)
