OmsRcClient_UT 下單功能增加: 欄位循環(例:多帳號、多商品), 自動增加OrdNo; 把 f9omstw_IncStrAlpha(); 抽出成 C API;

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -6,6 +6,7 @@ set(f9omstw_src
  OmsCoreByThread.cpp
  OmsResource.cpp
  OmsTools.cpp
+ OmsToolsC.c
  OmsBackend.cpp
  OmsBackendRecorder.cpp
  OmsOrdTeam.cpp
