Add OMS客戶端錯誤訊息翻譯機制: OmsErrCode/*; f9omstw_MakeErrMsg();

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -7,6 +7,7 @@ set(f9omstw_src
  OmsResource.cpp
  OmsTools.cpp
  OmsToolsC.c
+ OmsMakeErrMsg.cpp
  OmsBackend.cpp
  OmsBackendRecorder.cpp
  OmsOrdTeam.cpp
