Add: 盤中零股; T30、O40、T32、T33 匯入機制; 完成 OmsEvent 機制, 提供 OmsEventInfo, OmsEventSessionSt; OmsRcClient_UT 增加指令: wc 等候連線, sleep; Add: OmsBrk::ForceFetchIvac(); 解決檢查碼可能不正確的問題;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,7 @@ add_subdirectory(f9omstw)
 add_subdirectory(f9omstws)
 add_subdirectory(f9omstwf)
 add_subdirectory(f9omsrc)
-add_subdirectory(f9utw)
+
+if(CMAKE_F9OMSTW_BUILD_UNIT_TEST)
+   add_subdirectory(f9utw)
+endif()
