--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -25,14 +25,17 @@
 
 00200 = Bad RxKind                      | RxKind 有誤
 00201 = Bad Side                        | 買賣別有誤
-00202 = Bad Qty                         | 新單:超過上限?非整股數量? 改單:期望的改後數量有誤(不可增量,或期望的改後數量與現在LeavesQty+CumQty相同)
+00202 = Bad ChgQty                      | 改單期望的改後數量有誤(不可增量,或期望的改後數量與現在LeavesQty+CumQty相同)
 00203 = Bad Price                       | 下單價格有誤
 00204 = Bad PriType                     | PriType有誤
 00205 = Bad TimeInForce                 | TimeInForce有誤
+00206 = Symb no market price            | 商品不支援市價下單
+00207 = Not support change price        | 不支援改價(定價交易無改價功能,或系統不支援改價)
 
 00300 = Ivr not found, or no permission | 下單帳號有誤或沒權限
 00301 = Field not match                 | 刪改查提供的欄位與原委託不同
 00302 = Deny add report                 | 補單操作,必須有 AllowAddReport 權限; 或有權限但找不到委託
+00303 = IniReq Must be a RequestNew     | 不支援使用 OmsRequestIni 執行刪改查     # 不一定會發生,由實際下單步驟決定是否支援.
 
 00400 = Over flow control               | 客戶端超過下單流量管制
 
