--- a/OmsErrCode/OmsErrCode.30xxx.cfg
+++ b/OmsErrCode/OmsErrCode.30xxx.cfg
@@ -34,13 +34,13 @@
 
 # --- TMP/FIX 不一致?
 # TMP
-30035 = QFII not Open an account                              | 外資客戶尚未開戶
-30036 = BUY QUANTITY OVER ABNORMAL STOCK LIMIT                | 買進金額超過異常股票限制(異常股票4000/1000萬)
-30037 = SELL QUANTITY OVER ABNORAML STOCK LIMIT               | 賣出金額超過異常股票限制(異常股票4000/1000萬)
+#30035 = QFII not Open an account                              | 外資客戶尚未開戶
+#30036 = BUY QUANTITY OVER ABNORMAL STOCK LIMIT                | 買進金額超過異常股票限制(異常股票4000/1000萬)
+#30037 = SELL QUANTITY OVER ABNORAML STOCK LIMIT               | 賣出金額超過異常股票限制(異常股票4000/1000萬)
 # FIX
-#30035 = BUY QUANTITY OVER ABNORMAL STOCK LIMIT                | 買進金額超過異常股票限制(異常股票60000萬)
-#30036 = SELL QUANTITY OVER ABNORAML STOCK LIMIT               | 賣出金額超過異常股票限制(異常股票60000萬)
-#30037 = Selling amount exceeds limitation of monitoring stock | 賣出金額超過異常股票限制(異常股票4000/1000萬)
+30035 = BUY QUANTITY OVER ABNORMAL STOCK LIMIT                | 買進金額超過異常股票限制(異常股票60000萬)
+30036 = SELL QUANTITY OVER ABNORAML STOCK LIMIT               | 賣出金額超過異常股票限制(異常股票60000萬)
+30037 = Selling amount exceeds limitation of monitoring stock | 賣出金額超過異常股票限制(異常股票4000/1000萬)
 # ---
 
 30038 = Not allow for margin trading             | 不可信用交易
