--- a/OmsErrCode/OmsErrCode.32xxx.cfg
+++ b/OmsErrCode/OmsErrCode.32xxx.cfg
@@ -63,3 +63,70 @@
 32254 = TwseExCode Not Found                       | 檢查並更正TwseExCode
 32255 = OrigClOrdID Not Found                      | 檢查並更正OrigClOrdID
 32256 = TwseRejStaleOrd Not Found                  | 檢查並更正TwseRejStaleOrd
+
+# ----- 櫃買盤中零股/Intraday: Cxxx = 32xxx + 500
+32501 = TIME IS OVER                             | 超過收盤時間,結束零股交易子系統
+32502 = TIME IS EARLY                            | 零股時間未到，稍待再輸入委託
+32505 = ORDER NOT FOUND                          | 檢查成交回報是否已成交或檢查各欄位是否有誤
+32511 = CHANGE ORDER ERROR                       | 改單時，價格與數量不可同時輸入值或零。
+32512 = BROKER-NO ERROR                          | 檢查並更正證券商代號,FIX欄位SenderSubID
+32513 = BRANCH-NO ERROR                          | 檢查並更正分公司代號,FIX欄位SenderSubID
+32514 = IVACNO ERROR                             | 檢查並更正投資人帳號FIX欄位Account
+32515 = PVC-ID ERROR                             | 檢查並更正PVC代號 
+32518 = ORDER-NO ERROR                           | 檢查並更正委託書編號FIX欄位OrderID
+32519 = IVACNO-FLAG                              | 檢查並更正投資人下單類別註記FIX欄位TwseIvacnoFlag
+32520 = STOCK-NO ERROR                           | 檢查並更正股票代號,FIX欄位Symbol
+32521 = PRICE ERROR                              | 檢查並更正單價,FIX欄位Price
+32522 = QUANTITY ERROR                           | 檢查並更正委託數量,FIX欄位OrderQty
+32524 = BUY-SELL-CODE ERROR                      | 檢查並更正買賣別,FIX欄位Side
+32525 = ORDER TYPE ERROR                         | 檢查並更正委託種類,FIX欄位TwseOrdType
+32526 = EXCHANGE-CODE ERROR                      | 檢查並更正交易別,FIX欄位TwseExCode
+32527 = MAINLAND AREA INVESTORS NOT ALLOW TO BUY | 大陸地區人士不得買進,檢查並更正帳號
+32528 = DEALER NOT ALLOW TO BUY                  | 自營商不可買進證券類股,檢查並更正證券代號
+32529 = QFII NOT ALLOW TO BUY                    | 此證券不允許外資帳號買進,檢查並更正證券代號
+32530 = QUANTITY OVER LIMIT                      | 外資買進超過委託額度
+32531 = QUANTITY WAS CUT                         | 外資買進委託數量被刪減
+32532 = DELETE OVER QUANTITY                     | 減量數量超過原有數量
+32533 = CHANGE，DELETE OR QUERY ONLY             | 總委託金額超過限額,只允許取消，改量及查詢
+32535 = QFII not Open an account                 | 外資客戶尚未開戶,檢查並更正帳號
+32536 = BUY AMOUNT EXCEEDS ABNORMAL STOCK LIMIT  | 買進金額超過異常股票限制,今日買入委託申報受限股票金額超過證券商可買入金額
+32537 = SELL AMOUNT EXCEEDS ABNORAML STOCK LIMIT | 賣出金額超過異常股票限制,今日賣出委託申報受限股票金額超過證券商可賣出金額
+32541 = DUPLICATE ORDER ID                       | 委託書編號重複,請按順序編委託書編號
+32543 = Stock suspended                          | 請檢查委託資料,該股票已不允許輸入委託
+32545 = STOCK CLOSED                             | 該股票已收盤,請檢查委託資料,該股票已收盤不允許輸入委託
+32546 = OrdType Error                            | 檢查並更正委託方式註記
+32547 = TIME-IN-FORCE ERROR                      | 請檢查並更正委託時效類別註記
+32550 = No LeavesQty                             | 檢查成交回報是否已成交
+32589 = Error Over Limit                         | 錯誤次數超過限制,聯絡櫃買中心電腦操作管理人員解除設定
+32599 = CALL COMPUTER CENTER                     | 查詢委託是否已輸入成功或打電話到櫃買中心詢問
+
+32700 = SYSTEM NOT READY                         | 系統尚未READY, 請稍候
+32721 = SenderSubID Error                        | 檢查並更正SenderSubID
+32722 = ClOrdID Length Error                     | 檢查並更正ClOrdID
+32723 = TransactTime Error                       | 檢查並更正TransactTime
+32724 = OrderID Length Error                     | 檢查並更正OrderID
+32725 = Account Length Error                     | 檢查並更正Account
+32726 = Symbol Length Error                      | 檢查並更正Symbol
+32727 = OrderQty Length Error                    | 檢查並更正OrderQty
+32728 = Price Length Error                       | 檢查並更正Price
+32729 = TwseIvacnoFlag Length Error              | 檢查並更正TwseIvacnoFlag
+32730 = TwseOrdType Length Error                 | 檢查並更正TwseOrdType
+32731 = TwseExCode Length Error                  | 檢查並更正TwseExCode
+32732 = OrigClOrdID Length Error                 | 檢查並更正OrigClOrdID
+32733 = TwseRejStaleOrd Length Error             | 檢查並更正TwseRejStaleOrd
+32741 = SenderSubID Not Found                    | 檢查並更正SenderSubID
+32742 = ClOrdID Not Found                        | 檢查並更正ClOrdID
+32743 = TransactTime Not Found                   | 檢查並更正TransactTime
+32744 = OrderID Not Found                        | 檢查並更正OrderID
+32745 = Account Not Found                        | 檢查並更正Account
+32746 = Symbol Not Found                         | 檢查並更正Symbol
+32747 = Side Not Found                           | 檢查並更正Side
+32748 = OrderQty Not Found                       | 檢查並更正OrderQty
+32749 = OrdType Not Found                        | 檢查並更正OrdType
+32750 = TimeInForce Not Found                    | 檢查並更正TimeInForce
+32751 = Price Not Found                          | 檢查並更正Price
+32752 = TwseIvacnoFlag Not Found                 | 檢查並更正TwseIvacnoFlag
+32753 = TwseOrdType Not Found                    | 檢查並更正TwseOrdType
+32754 = TwseExCode Not Found                     | 檢查並更正TwseExCode
+32755 = OrigClOrdID Not Found                    | 檢查並更正OrigClOrdID
+32756 = TwseRejStaleOrd Not Found                | 檢查並更正TwseRejStaleOrd
