--- a/f9omsrc/forms/ApiBase.cfg
+++ b/f9omsrc/forms/ApiBase.cfg
@@ -37,7 +37,12 @@ $ApiReqFrom = {
   /SesName = %ApiSes.Name
   /UserId  = %ApiSes.UserId
   /FromIp  = %ApiSes.FromIp
-  /Src     = F    # Src 填固定值? 或由 user 填? 或...?
+
+  # 來源別
+  # Src 填固定值:
+  #   /Src     = F    # Src 填固定值? 或由 user 填? 或...?
+  # Src 由 client 填值:
+      Src
 }
 $ApiReqBase = {
   $ApiReqFrom
