--- a/f9omsrc/forms/ApiTwsAll.cfg
+++ b/f9omsrc/forms/ApiTwsAll.cfg
@@ -1,23 +1,15 @@
 ﻿#
-# ApiAll.cfg
+# ApiTwsAll.cfg
 #
-# API交易表單設定: 載入全部API表單
+# API交易表單設定: 載入全部TWS.API表單
 #
 # ----------------------------------------------------------------------------
 $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白」: 則使用正體中文(zh).
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
-# 證券.
 $include: ApiTwsReq.cfg
 $include: ApiTwsRpt.cfg
 
-# 期權.
-$include: ApiTwf1Req.cfg
-$include: ApiTwf1Rpt.cfg
-$include: ApiTwf7Req.cfg
-$include: ApiTwf7Rpt.cfg
-#$include: ApiTwf9Req.cfg
-#$include: ApiTwf9Rpt.cfg
-
 # 事件回報.
-#$include: ApiEvInfo.cfg
+# $include: ApiEvInfo.cfg
+$include: ApiEvSesSt.cfg
