--- a/f9omstws/CMakeLists.txt
+++ b/f9omstws/CMakeLists.txt
@@ -12,7 +12,8 @@ set(f9omstws_src
 
  OmsTwsTradingLineFix.cpp
  OmsTwsTradingLineFixSend.cpp
- OmsTwsTradingLineTmp2019.cpp
+
+ OmsTwsImpT.cpp
 )
 add_library(f9omstws_s STATIC ${f9omstws_src})
 target_link_libraries(f9omstws_s f9omstw_s f9tws_s fon9_s pthread dl)
