--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -1,14 +1,6 @@
 #
 # OMS 風控失敗
 #
-10000 = Ivr not found            | 找不到下單帳號
-
-10101 = Symbol not found         | 找不到商品資料:市價單無法風控
-10102 = Symbol price not found   | 有商品資料,但漲跌停價不正確:市價單無法風控
-10103 = Bad price                | 限價單沒填價格
-10104 = Over PriUpLmt            | 超過漲停價
-10105 = Over PriDnLmt            | 超過跌停價
-
 # --------------------------------------------
 $FQTY = U8:,
 $FAMT = U8:,
@@ -21,17 +13,41 @@ $FAMT = U8:,
 #   * Format: 參考各型別的格式化輸出參數.
 #
 # 格式化範例:
-# * OMS訊息: Bal=2126|Leaves=0|FilledBuy=0|FilledSell=0|Add=10000|Over=7874
-# * 翻譯後: 庫存不足 7,874: 庫存=2,126/已委託未成交=0/買進成交=0/賣出成交=0/此筆新增=10,000
+# * 翻譯設定: 庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/已委託未成交={:Leaves:$FQTY:}/買進成交={:FilledBuy:$FQTY:}/賣出成交={:FilledSell:$FQTY:}/此筆新增={:Add:$FQTY:}
+# * OMS訊息:  Bal=2126|Leaves=0|FilledBuy=0|FilledSell=0|Add=10000|Over=7874
+# * 翻譯後:   庫存不足 7,874: 庫存=2,126/已委託未成交=0/買進成交=0/賣出成交=0/此筆新增=10,000
+# 若翻譯設定為「-」則使用原始「OMS訊息」.
+
+# --------------------------------------------
+10000 = Ivr not found                  | 找不到下單帳號(或帳號未啟用)
+10001 = Bad OType                      | OType 不正確或不支援
+
+10101 = Symbol not found               | 找不到商品資料:市價單無法風控
+10102 = Symbol price not found         | 參考價不存在,不可交易
+10103 = Bad price                      | 限價單沒填價格
+10104 = Over PriUpLmt                  | 超過漲停價
+10105 = Over PriDnLmt                  | 超過跌停價
+10106 = Symbol fixed price not found   | 定價交易商品不存在(T33)
+
+# --------------------------------------------
+10150 = Bad qty                        | 數量有誤(數量不可<=0)
+
+10151 = {
+en: -
+zh: 下單數量必須是 {:ShUnit:} 的整數倍
+}
+10152 = {
+en: -
+zh: 下單數量超過上限 {:MaxQty:} (整張的股數 {:ShUnit:})
+}
 
 # --------------------------------------------
 10200 = {
-en: -  # 「-」強制使用原始訊息.
+en: -
 zh: 庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/已委託未成交={:Leaves:$FQTY:}/買進成交={:FilledBuy:$FQTY:}/賣出成交={:FilledSell:$FQTY:}/此筆新增={:Add:$FQTY:}
 }
 
 # --------------------------------------------
-
 # {Used} 為券商提供的已用額, 與 OMS 的下單無關.
 10300 = {
 en: -
