--- a/OmsErrCode/OmsErrCode.22xxx.cfg
+++ b/OmsErrCode/OmsErrCode.22xxx.cfg
@@ -61,3 +61,66 @@
 22254 = TwseExCode Not Found          | 檢查並更正TwseExCode
 22255 = OrigClOrdID Not Found         | 檢查並更正OrigClOrdID
 22256 = TwseRejStaleOrd Not Found     | 檢查並更正TwseRejStaleOrd
+
+# ----- 上市盤中零股/Intraday: Cxxx = 22xxx + 500
+22501 = TIME IS OVER                            | 超過收盤時間,結束交易子系統
+22502 = TIME IS EARLY                           | 時間未到,稍待再輸入委託
+22505 = ORDER NOT FOUND                         | 檢查成交回報是否已成交或檢查各欄位是否有誤
+22511 = CHANGE ORDER ERROR                      | 改單時,價格與數量不可同時輸入值或零
+22512 = BROKER-NO ERROR                         | 檢查並更正證券商代號,FIX欄位SenderSubID
+22513 = BRANCH-NO ERROR                         | 檢查並更正分公司代號,FIX欄位SenderSubID
+22514 = IVACNO ERROR                            | 檢查並更正投資人帳號,FIX欄位Account
+22518 = ORDER-NO ERROR                          | 檢查並更正委託書編號,FIX欄位OrderID
+22519 = IVACNO-FLAG                             | 檢查並更正投資人下單類別註記,FIX欄位TwseIvacnoFlag
+22520 = STOCK-NO ERROR                          | 檢查並更正股票代號,FIX欄位Symbol
+22521 = PRICE ERROR                             | 檢查並更正單價,FIX欄位Price
+22522 = QUANTITY ERROR                          | 檢查並更正委託數量,FIX欄位OrderQty
+22524 = BUY-SELL-CODE ERROR                     | 檢查並更正買賣別,FIX欄位Side
+22525 = ORDER TYPE ERROR                        | 檢查並更正委託種類,FIX欄位TwseOrdType
+22526 = EXCHANGE-CODE ERROR                     | 檢查並更正交易別,FIX欄位TwseExCode
+22528 = FOREIGNER NOT ALLOWED                   | 該股票不允許外資交易
+22530 = QUANTITY OVER LIMIT                     | 外資買進超過委託額度
+22531 = QUANTITY WAS CUT                        | 外資買進委託數量被刪減
+22532 = DELETE OVER QUANTITY                    | 減量數量超過原有數量
+22533 = CHANGE，DELETE OR QUERY ONLY            | 總委託金額超過限額,只允許取消,改量及查詢
+22535 = BUY QUANTITY OVER ABNORMAL STOCK LIMIT  | 今日買入委託申報受限股票金額超過證券商可買入金額，請檢查數量
+22536 = SELL QUANTITY OVER ABNORAML STOCK LIMIT | 今日賣出委託申報受限股票金額超過證券商可賣出金額，請檢查數量
+22540 = Duplicate OrderID                       | 請按順序編委託書編號,FIX欄位OrderID
+22543 = Stock suspended                         | 請檢查委託資料,該股票已不允許輸入委託
+22546 = OrdType Error                           | 檢查並更正委託方式註記
+22547 = TIME-IN-FORCE ERROR                     | 請檢查並更正委託時效類別註記
+22550 = No LeavesQty                            | 檢查成交回報是否已成交
+22589 = Error Over Limit                        | 錯誤次數超過限制,聯絡證交所電腦操作管理人員解除設定
+22597 = Time Difference                         | 傳送時間逾時,請重新輸入委託,FIX欄位TransactTime
+22599 = CALL COMPUTER CENTER                    | 查詢委託是否已輸入成功或打電話到交易所詢問
+
+22700 = SYSTEM NOT READY                        | 系統尚未READY, 請稍候
+22721 = SenderSubID Error                       | 檢查並更正SenderSubID
+22722 = ClOrdID Length Error                    | 檢查並更正ClOrdID
+22723 = TransactTime Error                      | 檢查並更正TransactTime
+22724 = OrderID Length Error                    | 檢查並更正OrderID
+22725 = Account Length Error                    | 檢查並更正Account
+22726 = Symbol Length Error                     | 檢查並更正Symbol
+22727 = OrderQty Length Error                   | 檢查並更正OrderQty
+22728 = Price Length Error                      | 檢查並更正Price
+22729 = TwseIvacnoFlag Length Error             | 檢查並更正TwseIvacnoFlag
+22730 = TwseOrdType Length Error                | 檢查並更正TwseOrdType
+22731 = TwseExCode Length Error                 | 檢查並更正TwseExCode
+22732 = OrigClOrdID Length Error                | 檢查並更正OrigClOrdID
+22733 = TwseRejStaleOrd Length Error            | 檢查並更正TwseRejStaleOrd
+22741 = SenderSubID Not Found                   | 檢查並更正SenderSubID
+22742 = ClOrdID Not Found                       | 檢查並更正ClOrdID
+22743 = TransactTime Not Found                  | 檢查並更正TransactTime
+22744 = OrderID Not Found                       | 檢查並更正OrderID
+22745 = Account Not Found                       | 檢查並更正Account
+22746 = Symbol Not Found                        | 檢查並更正Symbol
+22747 = Side Not Found                          | 檢查並更正Side
+22748 = OrderQty Not Found                      | 檢查並更正OrderQty
+22749 = OrdType Not Found                       | 檢查並更正OrdType
+22750 = TimeInForce Not Found                   | 檢查並更正TimeInForce
+22751 = Price Not Found                         | 檢查並更正Price
+22752 = TwseIvacnoFlag Not Found                | 檢查並更正TwseIvacnoFlag
+22753 = TwseOrdType Not Found                   | 檢查並更正TwseOrdType
+22754 = TwseExCode Not Found                    | 檢查並更正TwseExCode
+22755 = OrigClOrdID Not Found                   | 檢查並更正OrigClOrdID
+22756 = TwseRejStaleOrd Not Found               | 檢查並更正TwseRejStaleOrd
